--- a/main.html
+++ b/main.html
@@ -1,16 +1,31 @@
-<!DOCTYPE html>
+<div class="container">
+  <button class="element" data-ns-test="block-inline-button">Test1</button>
+  <button class="element" data-ns-test="block-inline-button">Test2</button>
 
-<html>
+  <div class="element" data-ns-test="block-inline-div">Test1</div>
+  <div class="element" data-ns-test="block-inline-div">Test2</div>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+  <span class="element" data-ns-test="block-inline-span">Test1</span>
+  <span class="element" data-ns-test="block-inline-span">Test2</span>
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <p class="element" data-ns-test="block-inline-p">Test1</p>
+  <p class="element" data-ns-test="block-inline-p">Test2</p>
 
-</body>
+  <input class="element" data-ns-test="block-inline-input" type="text" value="Test1">
+  <input class="element" data-ns-test="block-inline-input" type="text" value="Test2">
 
-</html>
+  <cite class="element" data-ns-test="block-inline-cite">Test1</cite>
+  <cite class="element" data-ns-test="block-inline-cite">Test2</cite>
+
+  <code class="element" data-ns-test="block-inline-code">Test1</code>
+  <code class="element" data-ns-test="block-inline-code">Test2</code>
+
+  <h1 class="element" data-ns-test="block-inline-h1">Test1</h1>
+  <h1 class="element" data-ns-test="block-inline-h1">Test2</h1>
+
+  <sup class="element" data-ns-test="block-inline-sup">Test1</sup>
+  <sup class="element" data-ns-test="block-inline-sup">Test2</sup>
+
+  <sub class="element" data-ns-test="block-inline-sub">Test1</sub>
+  <sub class="element" data-ns-test="block-inline-sub">Test2</sub>
+</div>
