--- a/main.html
+++ b/main.html
@@ -1,31 +1,53 @@
-<div class="container">
-  <button class="element" data-ns-test="block-inline-button">Test1</button>
-  <button class="element" data-ns-test="block-inline-button">Test2</button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Block or Inline Elements</title>
+    <style>
+        div {
+            margin-bottom: 20px;
+            padding: 10px;
+            border: 1px solid black;
+        }
+    </style>
+</head>
+<body>
 
-  <div class="element" data-ns-test="block-inline-div">Test1</div>
-  <div class="element" data-ns-test="block-inline-div">Test2</div>
+    <!-- Paragraph Element -->
+    <div>
+        <p data-ns-test="block-element">This is a paragraph.</p>
+        <p data-ns-test="block-element">This is another paragraph.</p>
+    </div>
+    <!-- Answer: Block -->
 
-  <span class="element" data-ns-test="block-inline-span">Test1</span>
-  <span class="element" data-ns-test="block-inline-span">Test2</span>
+    <!-- Span Element -->
+    <div>
+        <span data-ns-test="inline-element">This is a span.</span>
+        <span data-ns-test="inline-element">This is another span.</span>
+    </div>
+    <!-- Answer: Inline -->
 
-  <p class="element" data-ns-test="block-inline-p">Test1</p>
-  <p class="element" data-ns-test="block-inline-p">Test2</p>
+    <!-- Heading Element (h1) -->
+    <div>
+        <h1 data-ns-test="block-element">This is a heading.</h1>
+        <h1 data-ns-test="block-element">This is another heading.</h1>
+    </div>
+    <!-- Answer: Block -->
 
-  <input class="element" data-ns-test="block-inline-input" type="text" value="Test1">
-  <input class="element" data-ns-test="block-inline-input" type="text" value="Test2">
+    <!-- Image Element -->
+    <div>
+        <img src="image1.jpg" alt="Image 1" data-ns-test="inline-element">
+        <img src="image2.jpg" alt="Image 2" data-ns-test="inline-element">
+    </div>
+    <!-- Answer: Inline -->
 
-  <cite class="element" data-ns-test="block-inline-cite">Test1</cite>
-  <cite class="element" data-ns-test="block-inline-cite">Test2</cite>
+    <!-- Div Element -->
+    <div>
+        <div data-ns-test="block-element">This is a div block.</div>
+        <div data-ns-test="block-element">This is another div block.</div>
+    </div>
+    <!-- Answer: Block -->
 
-  <code class="element" data-ns-test="block-inline-code">Test1</code>
-  <code class="element" data-ns-test="block-inline-code">Test2</code>
-
-  <h1 class="element" data-ns-test="block-inline-h1">Test1</h1>
-  <h1 class="element" data-ns-test="block-inline-h1">Test2</h1>
-
-  <sup class="element" data-ns-test="block-inline-sup">Test1</sup>
-  <sup class="element" data-ns-test="block-inline-sup">Test2</sup>
-
-  <sub class="element" data-ns-test="block-inline-sub">Test1</sub>
-  <sub class="element" data-ns-test="block-inline-sub">Test2</sub>
-</div>
+</body>
+</html>
